sentinel-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sentinel-frontend
  namespace: sentinel-monitoring
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sentinel-frontend
  template:
    metadata:
      labels:
        app: sentinel-frontend
    spec:
      imagePullSecrets:
        - name: sentinel-ghcr-secret
      containers:
      - name: frontend
        image: ghcr.io/mjabir07/sentinel-saas-frontend:latest
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: sentinel-frontend-service
  namespace: sentinel-monitoring
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: sentinel-frontend
